--- a/f_src/Css/sign_in.css
+++ b/f_src/Css/sign_in.css
@@ -1,15 +1,21 @@
 * {
-	/* background-color: #9ED5C5; */
 
 	font-family: 'Poppins', sans-serif;
 }
 
-.container{
+body {
+	background-image: url("../img/back.jpg");
+	background-position: center;
+	background-size: cover;
+	margin :0;
+	height: 100vh;
+}
+
+.container {
 
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	/* height: 500px; */
 	transform: translate(-50%, -50%);
 	background: white;
 	padding: 50px 50px 50px 50px;
@@ -28,7 +34,7 @@
 
 }
 
-.submit{
+.submit {
 	background : black;
 	color : white;
 	font-size: 15px;
@@ -55,6 +61,5 @@
 }
 
 .input::placeholder {
-	text-align: center;
-	
+	text-align: center;	
 }
