--- a/f_src/Css/sign_up.css
+++ b/f_src/Css/sign_up.css
@@ -22,7 +22,7 @@ body {
     width: 400px;
 	padding: 8px 20px 5px 30px;
     display: block;
-    background-color: white;
+    background-color: #e6e6e6;
     text-align: center;
     border-radius: 10px;
     border : solid;
@@ -38,12 +38,17 @@ p {
 
 #link {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     border: solid;
     border-radius: 5px;
     border-color:rgb(0, 0, 0);
     padding: 3px 3px 3px 3px;
+    text-decoration: none;
+}
+
+#link:hover {
+
 }
 
 #creat {
