--- a/f_src/Css/sign_in.css
+++ b/f_src/Css/sign_in.css
@@ -22,6 +22,14 @@ body {
 	border-radius: 10px;
 }
 
+.logo {
+	width: 100px;
+	height: 100px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .input {
 	border: solid;
 	padding: 16px 40px 10px 60px;
@@ -51,7 +59,7 @@ body {
 	width: 500px;
 	height: 50px;
 	border: none;
-	border-radius: 2px;
+	border-radius: 5px;
 	margin: 0 auto;
 }
 
